--- a/atlyss_save_editor.html
+++ b/atlyss_save_editor.html
@@ -136,9 +136,7 @@
                 const content = await file.text();
                 try {
                     const parsedContent = JSON.parse(content);
-                    fileData[file.name] = isFlatStructure(parsedContent)
-                        ? restoreNestedStructure(parsedContent)
-                        : parsedContent;
+                    fileData[file.name] = parsedContent;
                     const option = document.createElement("option");
                     option.value = file.name;
                     option.textContent = file.name;
@@ -149,28 +147,9 @@
             }
         });
 
-        function isFlatStructure(data) {
-            return Object.keys(data).some(key => /^\d+$/.test(key));
-        }
-
-        function restoreNestedStructure(data) {
-            const nestedData = {};
-            Object.keys(data).forEach(key => {
-                if (/^\d+$/.test(key)) {
-                    nestedData[key] = data[key];
-                } else {
-                    nestedData[key] = data[key];
-                }
-            });
-            return nestedData;
-        }
-
-
         // Recursively create editor for nested data
-        function createEditor(data, parentElement, path = "") {
+        function createEditor(data, parentElement) {
             for (const key in data) {
-                const currentPath = path ? `${path}.${key}` : key;
-
                 const div = document.createElement("div");
                 div.classList.add("key-value");
 
@@ -179,13 +158,15 @@
                 label.textContent = key;
                 div.appendChild(label);
 
-                if (typeof data[key] === "object" && data[key] !== null && !Array.isArray(data[key])) {
+                if (typeof data[key] === "object" && data[key] !== null) {
                     const nestedDiv = document.createElement("div");
                     nestedDiv.classList.add("nested");
                     div.appendChild(nestedDiv);
-                    createEditor(data[key], nestedDiv, currentPath);
+                    createEditor(data[key], nestedDiv);
                 } else {
-                    const input = createInputForValue(data[key], currentPath);
+                    const input = document.createElement("input");
+                    input.value = data[key];
+                    input.dataset.key = key;
                     div.appendChild(input);
                 }
 
@@ -193,70 +174,21 @@
             }
         }
 
-        function createInputForValue(value, path) {
-            const input = document.createElement("input");
-            input.dataset.path = path;
-
-            if (typeof value === "boolean") {
-                input.type = "checkbox";
-                input.checked = value;
-            } else if (typeof value === "number") {
-                input.type = "number";
-                input.value = value;
-            } else {
-                input.type = "text";
-                input.value = value;
-            }
-
-            return input;
-        }
-
-
-
         // Handle file selection
         fileSelector.addEventListener("change", () => {
             const selectedFile = fileSelector.value;
             editorContent.innerHTML = ""; // Clear editor content
 
             if (selectedFile && fileData[selectedFile]) {
-                const data = fileData[selectedFile];
-                createEditor(data, editorContent);
+                createEditor(fileData[selectedFile], editorContent);
             }
         });
 
         // Save modified file
         saveButton.addEventListener("click", () => {
             const selectedFile = fileSelector.value;
-
             if (selectedFile && fileData[selectedFile]) {
-                const data = fileData[selectedFile];
-
-                function updateData(data, parentElement) {
-                    const inputs = parentElement.querySelectorAll("input[data-path]");
-
-                    inputs.forEach(input => {
-                        const path = input.dataset.path.split(".");
-                        let target = data;
-
-                        for (let i = 0; i < path.length - 1; i++) {
-                            target = target[path[i]];
-                        }
-
-                        const key = path[path.length - 1];
-
-                        if (input.type === "checkbox") {
-                            target[key] = input.checked;
-                        } else if (input.type === "number") {
-                            target[key] = parseFloat(input.value);
-                        } else {
-                            target[key] = input.value;
-                        }
-                    });
-                }
-
-                updateData(data, editorContent);
-
-                const blob = new Blob([JSON.stringify(data, null, 4)], { type: "application/json" });
+                const blob = new Blob([JSON.stringify(fileData[selectedFile], null, 4)], { type: "application/json" });
                 const a = document.createElement("a");
                 a.href = URL.createObjectURL(blob);
                 a.download = selectedFile;
