Fix: update language

--- a/atlyss_save_editor.html
+++ b/atlyss_save_editor.html
@@ -107,6 +107,11 @@
             saveButton.textContent = languages[currentLanguage].saveButton;
         }
 
+        languageSelector.addEventListener("change", (event) => {
+            currentLanguage = event.target.value;
+            updateLanguage();
+        });
+
         // Load configuration file
         configInput.addEventListener("change", async (event) => {
             const file = event.target.files[0];
